# data_stream

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/: data_stream.c  data_stream.h
test/: test_data_stream.c
